--- a/Folder1/index.html
+++ b/Folder1/index.html
@@ -1,3 +1,86 @@
-<h1>Change file index.html</h1>
-<h2>Change lan 3</h2>
-<script src="/index.js"></script>
+<!-- <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <h2>Ôn Tập HTML và CSS</h2>
+    <!DOCTYPE html>
+    <html>
+      <head>
+        <style>
+          .styled-element::before {
+            content: "Trước ";
+            color: red;
+            border: 1px green solid;
+            flex: 5;
+            background-color: gray;
+          }
+
+          .styled-element::after {
+            content: " Sau";
+            color: blue;
+            flex: 1;
+            border: 1px yellow solid;
+          }
+          .styled-element {
+            border: 1px solid #333;
+            display: flex;
+
+            flex-direction: row;
+          }
+        </style>
+      </head>
+      <body>
+        <div class="styled-element">Nội dung</div>
+      </body>
+    </html>
+  </body>
+  <script type="text/javascript" src="./index.js"></script>
+</html> -->
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+      }
+      header {
+        background-color: #333;
+        color: white;
+        text-align: center;
+        padding: 10px;
+      }
+      .content {
+        padding: 20px;
+        text-align: center;
+      }
+
+      /* Responsive Styles */
+      @media (max-width: 600px) {
+        header {
+          font-size: 18px;
+        }
+        .content {
+          font-size: 14px;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <h1>Trang Responsive</h1>
+    </header>
+    <div class="content">
+      <p>
+        Chào mừng bạn đến với trang web ví dụ về responsive design! Trang này sẽ
+        thay đổi giao diện tùy theo kích thước của màn hình.
+      </p>
+    </div>
+  </body>
+</html>
